[gd_scene load_steps=6 format=3 uid="uid://bmvgddbraddl6"]

[ext_resource type="Texture2D" uid="uid://68btsn8i3yyd" path="res://graphics/objects/electrical/electrical_box.png" id="1_irsow"]
[ext_resource type="Script" path="res://scenes/ui/electrical_box_ui.gd" id="1_kcxba"]
[ext_resource type="Texture2D" uid="uid://be1bq76lfb6k0" path="res://graphics/ui/x_button.png" id="2_qrnio"]
[ext_resource type="PackedScene" uid="uid://c8ubeawbakhbr" path="res://scenes/ui/drag_and_drop.tscn" id="4_qajuo"]
[ext_resource type="Texture2D" uid="uid://co3domh83ug07" path="res://graphics/objects/electrical/resistor.png" id="5_bu58k"]

[node name="ElectricalBoxUI" type="CanvasLayer"]
script = ExtResource("1_kcxba")

[node name="PanelWindow" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="PanelWindow"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_irsow")

[node name="TextureButton" type="TextureButton" parent="PanelWindow/TextureRect"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0
texture_normal = ExtResource("2_qrnio")

[node name="DragAndDrop" parent="." instance=ExtResource("4_qajuo")]
offset_left = 688.0
offset_top = 61.0
offset_right = 728.0
offset_bottom = 101.0
texture = ExtResource("5_bu58k")
custom_size = Vector2(200, 100)

[node name="DragAndDrop2" parent="." instance=ExtResource("4_qajuo")]
offset_left = 404.0
offset_top = 81.0
offset_right = 444.0
offset_bottom = 121.0
custom_size = Vector2(200, 100)

[node name="DragAndDrop3" parent="." instance=ExtResource("4_qajuo")]
offset_left = 588.0
offset_top = 335.0
offset_right = 628.0
offset_bottom = 375.0
custom_size = Vector2(200, 100)

[node name="DragAndDrop4" parent="." instance=ExtResource("4_qajuo")]
offset_left = 375.0
offset_top = 319.0
offset_right = 415.0
offset_bottom = 359.0
custom_size = Vector2(200, 100)

[node name="DragAndDrop5" parent="." instance=ExtResource("4_qajuo")]
offset_left = 689.0
offset_top = 276.0
offset_right = 729.0
offset_bottom = 316.0
custom_size = Vector2(200, 100)

[connection signal="pressed" from="PanelWindow/TextureRect/TextureButton" to="." method="_on_texture_button_pressed"]
